Ejercicios del 6 al 10

--- a/exercises/08-Split-Screen-in-three/styles.css
+++ b/exercises/08-Split-Screen-in-three/styles.css
@@ -1,12 +1,17 @@
-body {
+body > div {
 	margin: 0;
+	display: flex;
+	position: relative;
 }
 #sectionA {
 	background: blue;
+	width: 33%;
 }
 #sectionB {
 	background: red;
+	width: 33%;
 }
 #sectionC {
 	background: green;
+	width: 33%;
 }
