--- a/exercises/06-center-content/styles.css
+++ b/exercises/06-center-content/styles.css
@@ -1,9 +1,9 @@
 body > div {
 	background: grey;
 	width: 400px;
-	position:;
-	margin-left: 50px;
-	margin-right: 50px;
+	position: absolute;
+	left: 35%;
+	top: 15%;
 }
 body {
 	background: blue;
