--- a/exercises/07-Sidebar/styles.css
+++ b/exercises/07-Sidebar/styles.css
@@ -1,3 +1,12 @@
-#wrapper{background: grey;}
-#sidebar{background: blue;}
-#content{background: yellow;}
+#wrapper {
+	background: grey;
+	display: flex;
+}
+#sidebar {
+	background: blue;
+	flex-grow: 1;
+}
+#content {
+	background: yellow;
+	flex-grow: 2;
+}
